change gradle jR in readme